# rust_sgx_sdk

dfinity_3enclaves/: Makefile
dfinity_3enclaves/attestation/: Cargo.toml
dfinity_3enclaves/attestation/src/: func.rs  lib.rs  types.rs
dfinity_3enclaves/enclave1/: Enclave1.config.xml  Enclave1.edl
dfinity_3enclaves/enclave1/src/: lib.rs
dfinity_3enclaves/enclave2/: Cargo.toml
dfinity_3enclaves/enclave2/src/: hex.rs
dfinity_3enclaves/enclave3/: Enclave3.edl
dfinity_3enclaves/enclave3/src/: lib.rs
dfinity_3enclaves/wast_files/: moduleThree.wat  moduleTwo.wat  simplecall.wat
edl/: merkle.h  sgx_u_unistd.edl
samplecode/dfinity_3enclaves/: Makefile
samplecode/dfinity_3enclaves/app/: App.cpp  App.h
samplecode/dfinity_3enclaves/edl/: merkle.edl  merkle.h
samplecode/dfinity_3enclaves/enclave1/: Cargo.toml  Enclave1.edl
samplecode/dfinity_3enclaves/enclave1/src/: lib.rs  wasmi_enc1.rs  wasmi_encl1.rs  wasmi_plugin.rs
samplecode/dfinity_3enclaves/enclave2/: Enclave2.config.xml  Enclave2.edl
samplecode/dfinity_3enclaves/enclave3/: Cargo.toml
samplecode/dfinity_3enclaves/mktree/: Makefile  merkle.c  merkle.h
samplecode/dfinity_3enclaves/wast_files/: dfinity_data.wast  e1.wat  e2.wat  e3.wat  e4.wat  module2.wast  module3.wast  module5.wast  result.txt  sum.wat  test.wasm  test_for_continue_msg.wat  transfer.py
samplecode/hello-dfinity/: .Makefile.swp  Makefile
samplecode/hello-dfinity-c/: Makefile
samplecode/hello-dfinity-c/app/: Enclave_u.c  Enclave_u.h  app.c
samplecode/hello-dfinity-c/enclave/: .Enclave.edl.swp  Enclave.config.xml  Enclave.edl  Enclave_t.c  Enclave_t.h
samplecode/hello-dfinity/app/: Cargo.toml  Enclave_u.c  Enclave_u.h  build.rs
samplecode/hello-dfinity/app/src/: .main.rs.swp  main.rs
samplecode/wasmi/: .Makefile.swp  Makefile
(+40 files in other folders)
