[package]
name = "enclave3"
version = "1.0.0"
authors = ["Baidu"]

[lib]
name = "enclave3"
crate-type = ["staticlib"]

[features]
default = []

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = { path = "../../../sgx_types" }
sgx_trts = { path = "../../../sgx_trts" }
sgx_tstd = { path = "../../../sgx_tstd" }
sgx_tdh = { path = "../../../sgx_tdh" }

[dependencies]
attestation = {path = "../attestation/"}