[package]
name = "app"
version = "1.0.0"
authors = ["Baidu"]
build = "build.rs"

[dependencies]
sgx_types = { path = "../../../sgx_types" }
sgx_urts = { path = "../../../sgx_urts" }
mio = "0.6"
dirs = "1.0.2"
wabt = "0.4.0"
serde = {version = "=1.0.71"}
serde_json = {version = "=1.0.24"}
serde_derive = {version = "=1.0.71"}
nan-preserving-float = "0.1.0"
